<resources>
    <string name="app_name">ClassScheduler</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="students">Students</string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="title_activity_student_profile">StudentProfile</string>
    <string name="student_profile">Student Profile</string>
    <string name="no_classes_added">No classes added</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="birthdate">Birthdate</string>
    <string name="grade">Grade</string>
    <string name="classes">Classes</string>
    <string name="add_class">Add Class</string>
    <string name="remove_class">Remove Class</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="teacher">Teacher</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="view_class_details">View Class Details</string>
    <string name="dismiss">Dismiss</string>
    <string name="new_class">New Class</string>
    <string name="main_menu">Main Menu</string>
    <string name="delete">Delete</string>
    <string name="delete_student_dialog">Are you sure you want to permanently delete this student?</string>
    <string name="return_button">Return</string>
    <string name="student_deleted">Student Deleted</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_student">Add Student</string>
    <string name="error_selecting_photo">Error selecting photo.</string>
    <string name="please_enter_valid_name">Please enter a valid name.</string>
    <string name="please_enter_valid_birthdate">Please enter a valid birthdate.</string>
    <string name="please_enter_valid_grade">Please enter a valid grade.</string>
    <string name="you_have_unsaved_messages_dialog">You have unsaved changes. Would you like to leave this page?</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="add_classes">Add Classes</string>
    <string name="remove_classes">Remove Classes</string>
    <string name="todays_classes">Today\'s Classes</string>
    <string name="s_classes">\'s Classes</string>
    <string name="search_class">Search Class</string>
    <string name="create_new_class">Create New Class</string>
    <string name="are_you_sure_delete_class_dialog">Are you sure you want to permanently delete this class?</string>
    <string name="class_deleted">Class Deleted.</string>
    <string name="return_dialog">Return</string>
    <string name="please_enter_valid_title">Please enter a valid title.</string>
    <string name="please_enter_valid_subject">Please enter a valid subject.</string>
    <string name="please_enter_valid_teacher">Please enter a valid teacher.</string>
    <string name="please_enter_schedule_times">Please enter schedule times.</string>
    <string name="choose_start_time">Choose Start Time:</string>
    <string name="choose_end_time">Choose End Time:</string>
    <string name="sign_in_successful">Sign in successful.</string>
    <string name="sign_in_canceled">Sign in canceled.</string>
    <string name="welcome_to_class_scheduler">Welcome to Class Scheduler!</string>
    <string name="class_scheduler">Class Scheduler</string>
    <string name="no_classes">No Classes</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="edit">Edit</string>
    <string name="no_classes_to_show">No classes to show.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_students_found">No students found.</string>
    <string name="no_classes_found">No classes found.</string>
    <string name="a_plus_sign_indicating_a_photo_may_be_added">A plus sign indicating a photo may be added.</string>
    <string name="a_calendar_image_indicating_a_date_may_chosen">A calendar image indicating a date may chosen.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
