<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".StudentProfile">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/student_profile_picture_view"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/a_plus_sign_indicating_a_photo_may_be_added"
        android:id="@+id/student_profile_plus_image_view"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/student_profile_picture_view"
        app:layout_constraintEnd_toStartOf="@+id/student_profile_picture_view"
        app:layout_constraintStart_toEndOf="@+id/student_profile_picture_view"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_picture_view"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/ic_baseline_add_24px" />

    <TextView
        android:id="@+id/student_profile_add_photo_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add_photo"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/student_profile_picture_view"
        app:layout_constraintEnd_toEndOf="@+id/student_profile_picture_view"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/student_profile_picture_view"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_plus_image_view"
        app:layout_constraintVertical_bias="0.100000024" />

    <LinearLayout
        android:id="@+id/student_info_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_views_height"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_picture_view">

        <TextView
            android:id="@+id/student_name_label_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:text="@string/name"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/student_profile_name_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:textSize="@dimen/student_edit_text_size"
            tools:text="Jon B" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_views_height"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_info_linear_layout">

        <TextView
            android:id="@+id/student_sex_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:text="@string/sex"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/student_profile_sex_view"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:textSize="@dimen/student_edit_text_size"
            tools:text="Male" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_views_height"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/student_age_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:text="@string/birthdate"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/student_profile_age_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:textSize="@dimen/student_edit_text_size"
            tools:text="August 13, 1991" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_views_height"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/student_grade_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:text="@string/grade"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/student_profile_grade_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:textSize="@dimen/student_edit_text_size"
            tools:text="13" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/student_classes_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:text="@string/classes"
            android:textSize="@dimen/label_text_size" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/student_profile_classes_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/student_edit_text_size"
                tools:text="Science, Math" />

            <TextView
                android:onClick="openClassDetailsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/view_class_details"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="italic"
                />

        </LinearLayout>
    </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>